--- a/pushy/pom.xml
+++ b/pushy/pom.xml
@@ -28,7 +28,8 @@
     <version>0.14.3-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>Pushy</name>
-
+    
+    <!-- com.eatthepath.pushy -->
     <parent>
         <groupId>com.eatthepath</groupId>
         <artifactId>pushy-parent</artifactId>
@@ -89,6 +90,35 @@
             <classifier>osx-x86_64</classifier>
             <scope>test</scope>
         </dependency>
+        
+        
+        
+        
+        <!-- com.relayrides.pushy -->
+        <dependency>
+        	<groupId>com.relayrides</groupId>
+        	<artifactId>pushy</artifactId>
+        	<version>0.9.3</version>
+        </dependency>
+        <!--
+        <dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-tcnative-boringssl-static</artifactId>
+			<version>1.1.33.Fork24</version>
+		</dependency>
+		-->
+		<dependency>
+			<groupId>org.eclipse.jetty.alpn</groupId>
+			<artifactId>alpn-api</artifactId>
+			<version>1.1.2.v20150522</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-nop</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		
     </dependencies>
 
     <properties>
